--- a/introduction/0x01.md
+++ b/introduction/0x01.md
@@ -74,3 +74,12 @@
 2. 另一种技术用到了软件部署正常步骤，流量逐渐转移到一个新的实例池，同时让旧的实例池在线做备份，称为 蓝绿部署
    1. 运用这样安全无虞的选项，新软件常常不需要事先做任何性能分析，直接在生产环境中进行测试，并可以在必要时进行迅速的回退
 
+### 视角
+
+审视性能时通过不同的视角来进行的
+1. 负载分析`workload analysis`
+2. 资源分析`resource analysis`
+
+系统管理员作为系统资源的负责人，通常采用资源分析的视角
+程序开发者对最终实现的负载性能负载，通常采用负载分析视角
+
