--- a/introduction/0x02.md
+++ b/introduction/0x02.md
@@ -19,3 +19,7 @@
 
 性能问题可能出于子系统之间复杂的互联上，即使这些子系统独立工作的时候表现都很好，也可呢个产生**连锁故障(cascading failure)**，指的是
 一个出现故障的组件会导致其他组件也产生性能问题。要理解这些问题，必须理清组件之间的关系， 了解它们是怎么协同工作
+生产环境负载的复杂特性也可能导致性能问题，而且实验室很难复现，它可能是间歇性的，甚至在某些情况下，性能问题可能由这些资源交互作用
+
+
+
